# weather-rust-service

./: Cargo.toml  README.md
src/: README.md  download.rs  main.rs  utils.rs
