[package]
name = "weather-rust-service"
version = "0.1.0"
authors = ["vylion <volfaria@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
# serde = { version = "1.0", features = ["derive"] }
reqwest = { version="0.10.8", features=["json", "blocking"] }
tokio = { version="0.2.22", features=["full"] }
rocket = "0.4.5"
assert_matches = "1.3.0"